--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .App {
-  text-align: center;
+  padding: 20px;
+}
+
+.nav-bar {
+  padding: 20px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
@@ -18,5 +26,15 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
